# Relight

./: .gitignore  .gitmodules  LICENSE  README.md  configure-mac.command  configure-win32.bat
CMake/: FindEmbree.cmake
src/: CMakeLists.txt  Makefile.py
src/demo/: Assets.cpp  Assets.h  FbxLoader.cpp  FbxLoader.h  GenerateUv.cpp  GenerateUv.h  Lightmapping.cpp  Lightmapping.h  Makefile.py  Mesh.h  RelightDemo.cpp  RelightDemo.h  Test.h  TestLightmapper.cpp  TestLightmapper.h  TestRadiosity.cpp  TestRadiosity.h  Value.h  Yaml.cpp  Yaml.h  camera.cpp  camera.h  input.cpp  input.h  main.cpp  mathlib.cpp  mathlib.h
src/relight/: BuildCheck.h  CMakeLists.txt  DirectLightCalculator.cpp  DirectLightCalculator.h  EmbreeModel.cpp  EmbreeModel.h  IndirectLightCalculator.cpp  IndirectLightCalculator.h  Light.cpp  Light.h  Lightmap.cpp  Lightmap.h  LightmapCalculator.cpp  LightmapCalculator.h  Lightmapper.cpp  Lightmapper.h  Makefile.py  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Model.cpp  Model.h  PathTracer.h  PhotonMap.cpp  PhotonMap.h  Radiosity.cpp  Radiosity.h  Relight.cpp  Relight.h  Scene.cpp  Scene.h  Types.h  UVUnwrap.cpp  UVUnwrap.h  Vector.cpp  Vector.h  Worker.cpp  Worker.h
src/relight/baker/: AmbientOcclusion.cpp  AmbientOcclusion.h  Baker.cpp  Baker.h  DirectLight.cpp  DirectLight.h  IndirectLight.cpp  IndirectLight.h  Photons.cpp  Photons.h
src/relight/radiosity/: Radiosity.cpp  Radiosity.h  RadiosityBuilder.cpp  RadiosityBuilder.h  RadiositySolver.cpp  RadiositySolver.h
src/relight/rt/: Embree.cpp  Embree.h  Tracer.h
src/relight/scene/: Atlas.cpp  Atlas.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Scene.cpp  Scene.h
(+77 files in other folders)
